[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Enemy.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/Hit.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 4 )

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 25.0, -25.0, 0.0 ]
}

[node name="Enemy" type="Area2D" groups=[
"Enemy",
]]
script = ExtResource( 2 )
health = 2
value = 10

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.5, 4.17233e-07 )
scale = Vector2( 0.35, 0.4 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -7.0
pitch_scale = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
